fix: make header left-right spacing even

--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -37,6 +37,12 @@
     text-align: left;
     padding-left: 1%;
   }
+  
+  .nav-item:not(:first-child){
+    text-align: right;
+    padding-left: 2%;
+  }
+
   .nav-item:last-child{
     padding-right: 1%;
   }
